--- a/env.production.j2
+++ b/env.production.j2
@@ -1,3 +1,3 @@
-VITE_SERVER_BASE_URL={{ urls.server }}
+VITE_ANALYSES_BASE_URL={{ urls.server }}
 VITE_CLIENT_BASE_URL={{ urls.clientapi }}
 VITE_SYSTEM_ANALYSER_ONE={{ urls.kibana }}
