update ( table : desktopList )

--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,6 @@ select option {
   background: rgba(255, 255, 255, 0.6);
   z-index: 1;
 }
+.col-span-36 {
+  grid-column: span 36 / span 36; /* Equivalent to col-span-36 in a 36-column grid */
+}
