--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,22 @@ select option {
   background: rgba(255, 255, 255, 0.6);
   z-index: 1;
 }
-.col-span-36 {
-  grid-column: span 36 / span 36; /* Equivalent to col-span-36 in a 36-column grid */
+/* styles.css */
+.custom-scrollbar {
+  scrollbar-color: rgb(20 184 166) rgb(229 229 229);
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgb(20 184 166);
+  border-radius: 6px; /* Adjust the value as needed */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: rgb(229 229 229);
+  border-radius: 6px; /* Adjust the value as needed */
 }
