--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: 'on';
-  src: url('/src/assets/fonts/OnNormal.woff2'),
+  src: url('/src/assets/fonts/IRANSans.eot'),
     url('/src/assets/fonts/OnNormal.woff');
 }
 
