--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,6 @@ select option {
   background-color: rgb(229 229 229);
   border-radius: 6px; /* Adjust the value as needed */
 }
+input[type='radio'] {
+  accent-color: teal;
+}
