--- a/src/App.css
+++ b/src/App.css
@@ -74,17 +74,18 @@ select option {
   scrollbar-color: rgb(20 184 166) rgb(229 229 229);
 }
 
-.custom-scrollbar::-webkit-scrollbar {
+::-webkit-scrollbar {
   height: 8px;
   width: 8px;
+  scrollbar-color: rgb(20 184 166) rgb(229 229 229);
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: rgb(20 184 166);
   border-radius: 6px; /* Adjust the value as needed */
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: rgb(229 229 229);
   border-radius: 6px; /* Adjust the value as needed */
 }
