--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,25 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'on';
-  src: url('/src/assets/fonts/OnLight.woff2'),
-    url('/src/assets/fonts/OnLight.woff');
+  font-family: 'kalameh';
+  src: url('/fonts/kalameh/woff2/KalamehWeb-Regular.woff2') format('woff2'),
+    url('/fonts/kalameh/woff/KalamehWeb-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'on';
-  src: url('/src/assets/fonts/OnMedium.woff2'),
-    url('/src/assets/fonts/OnMedium.woff');
+  font-family: 'kalameh';
+  src: url('/fonts/kalameh/woff2/KalamehWeb-SemiBold.woff2') format('woff2'),
+    url('/fonts/kalameh/woff/KalamehWeb-SemiBold.woff') format('woff');
+  font-weight: 500;
+  font-style: bold;
 }
 
-@font-face {
-  font-family: 'on';
-  src: url('/src/assets/fonts/OnBold.woff2'),
-    url('/src/assets/fonts/OnBold.woff');
-}
 
 @layer base {
   select {
-    @apply p-8;
+    @apply bg-red-600;
   }
   h2 {
     @apply bg-red-600;
@@ -36,8 +35,27 @@
   }
 }
 
+
+
 :root {
-  --toastify-font-family: on;
+  --toastify-font-family: 'kalameh';
+  --toastify-color-success: #14b8a6;
+  --toastify-color-error: #f87171;
+  --toastify-color-info: #6b7280;
+  --toastify-toast-max-height: 80px;
+}
+
+.Toastify__toast-body > div:last-child {
+  text-align: right;
+}
+
+.Toastify__toast-container--rtl .Toastify__toast-body > div:last-child {
+  text-align: left;
+}
+
+.Toastify__toast-icon {
+  margin: 0;
+  margin-inline-end: 0 !important;
 }
 
 select {
@@ -69,32 +87,51 @@ select option {
   background: rgba(255, 255, 255, 0.6);
   z-index: 1;
 }
-/* styles.css */
-.custom-scrollbar {
-  scrollbar-color: rgb(20 184 166) rgb(229 229 229);
-}
-
-::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
-  scrollbar-color: rgb(20 184 166) rgb(229 229 229);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: rgb(20 184 166);
-  border-radius: 6px; /* Adjust the value as needed */
-}
-
-::-webkit-scrollbar-track {
-  background-color: rgb(229 229 229);
-  border-radius: 6px; /* Adjust the value as needed */
-}
-input[type='radio'] {
-  accent-color: teal;
-}
 .custom-height {
   height: 45rem;
   min-height: auto;
   max-height: calc(65vh);
   /* height: ; */
+}
+
+
+
+.base-input .icon {
+  color: red; /* Change as needed */
+}
+
+input[type='time']::-webkit-calendar-picker-indicator {
+  filter: invert(0.4);
+}
+
+/* customize scroll */
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-thumb {
+  background: #d1d5db;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f3f4f6;
+}
+
+/* Dark mode styles with Tailwind's dark class */
+.dark ::-webkit-scrollbar-thumb {
+  background: #4b5563;
+}
+
+.dark ::-webkit-scrollbar-track {
+  background: #9ca3af;
+}
+
+h2 {
+  background-color: initial;
+}
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
