--- a/src/_components/atoms/Inputs/DatePicker/style.css
+++ b/src/_components/atoms/Inputs/DatePicker/style.css
@@ -9,48 +9,29 @@
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-.rmdp-week {
+.custom-calendar .rmdp-week {
   margin-bottom: 0.875rem;
 }
-.rmdp-week-day {
+
+.custom-calendar.dark .rmdp-week.dark {
+  margin-bottom: 0.875rem;
+}
+
+.custom-calendar .rmdp-week-day {
+  color: black;
   font-weight: 600;
   font-size: 0.875rem;
 }
-.rmdp-header {
-  padding: 4px;
-  font-size: 1rem !important;
-  margin-bottom: 1.938rem;
-}
-.rmdp-day {
-  width: 2.8rem !important;
-  height: 2.8rem !important;
-}
-.rmdp-header-values {
-  font-weight: 600;
-}
-.rmdp-arrow-container.rmdp-left,
-.rmdp-arrow-container.rmdp-right {
-  width: 16px;
-  height: 16px;
-}
-.rmdp-arrow-container:hover {
-  background-color: transparent !important;
-  box-shadow: none !important;
-}
-.rmdp-arrow {
-  border-width: 0 1px 1px 0 !important;
-  display: inline-block !important;
-  height: 10px !important;
-  margin-top: 5px !important;
-  padding: 2px !important;
-  width: 10px !important;
-}
-.custom-calendar .rmdp-week-day {
-  color: black;
-}
+
 .custom-calendar .rmdp-day:hover .sd:hover {
   background-color: #14b8a6;
   color: white;
+}
+
+.custom-calendar .rmdp-header {
+  padding: 4px;
+  font-size: 1rem !important;
+  margin-bottom: 1.938rem;
 }
 
 .custom-calendar .rmdp-day.rmdp-today .sd {
@@ -60,10 +41,16 @@
   border-width: 1px;
   border-radius: 100%;
 }
+
+.custom-calendar .rmdp-day {
+  width: 2.8rem !important;
+  height: 2.8rem !important;
+}
 .custom-calendar .rmdp-day .sd {
   font-size: 0.875rem !important;
   color: #6b7280;
 }
+
 .custom-calendar .rmdp-range {
   background-color: white !important;
   box-shadow: none !important;
@@ -76,6 +63,10 @@
   color: black;
 }
 
+.custom-calendar .rmdp-header-values {
+  font-weight: 600;
+}
+
 .custom-calendar .rmdp-range.start,
 .custom-calendar .rmdp-range.end {
   background-color: #14b8a6 !important;
@@ -86,8 +77,25 @@
   color: white;
 }
 
+.custom-calendar .rmdp-arrow-container.rmdp-left,
+.custom-calendar .rmdp-arrow-container.rmdp-right {
+  width: 16px;
+  height: 16px;
+}
+
+.custom-calendar .rmdp-arrow-container:hover {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+
 .custom-calendar .rmdp-arrow {
   border: solid #6b7280 !important;
+  border-width: 0 1px 1px 0 !important;
+  display: inline-block !important;
+  height: 10px !important;
+  margin-top: 5px !important;
+  padding: 2px !important;
+  width: 10px !important;
 }
 
 .custom-calendar .rmdp-day.rmdp-today.rmdp-range.end .sd {
@@ -108,6 +116,14 @@
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
+.custom-calendar-dark .rmdp-week {
+  margin-bottom: 0.875rem;
+}
+
+.custom-calendar-dark.dark .rmdp-week.dark {
+  margin-bottom: 0.875rem;
+}
+
 .custom-calendar-dark .rmdp-week-day {
   color: #f3f4f6;
   font-weight: 600;
@@ -119,6 +135,12 @@
   color: white;
 }
 
+.custom-calendar-dark .rmdp-header {
+  padding: 4px;
+  font-size: 0.875rem !important;
+  margin-bottom: 1.938rem;
+}
+
 .custom-calendar-dark .rmdp-day.rmdp-today .sd {
   border-color: #2dd4bf;
   background-color: #374151;
@@ -127,6 +149,10 @@
   border-radius: 100%;
 }
 
+.custom-calendar-dark .rmdp-day {
+  width: 2.8rem !important;
+  height: 2.8rem !important;
+}
 .custom-calendar-dark .rmdp-day .sd {
   font-size: 0.875rem !important;
   color: #6b7280;
@@ -158,8 +184,25 @@
   color: white;
 }
 
+.custom-calendar-dark .rmdp-arrow-container.rmdp-left,
+.custom-calendar-dark .rmdp-arrow-container.rmdp-right {
+  width: 16px;
+  height: 16px;
+}
+
+.custom-calendar-dark .rmdp-arrow-container:hover {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+
 .custom-calendar-dark .rmdp-arrow {
   border: solid #9ca3af !important;
+  border-width: 0 1px 1px 0 !important;
+  display: inline-block !important;
+  height: 10px !important;
+  margin-top: 5px !important;
+  padding: 2px !important;
+  width: 10px !important;
 }
 
 .custom-calendar-dark .rmdp-day.rmdp-today.rmdp-range.end .sd {
