refactor(Dashboard Page): Redesign Dashboard Page and modified or add several components in the Dashboard page (not complete yet)
- modified several components in the Dashboard page
- including layout changes, addition of new components
- Updated package.json and add new library for chartjs
- SEP-75: Redesign Dashboard part1

--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ input[type='time']::-webkit-calendar-picker-indicator {
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
 }
 ::-webkit-scrollbar-thumb {
   background: #d1d5db;
